# comarkater

./: .env.example  .gitignore  CLAUDE.md  comarketer_vision_v4.md  databricks.yml  migration_plan.md  pyproject.toml  setup_claude_code.sh
.claude/: conversion_readiness.md  settings.json
.claude/skills/: agent-eval-skill.skill  async-python-skill.skill  dab-skill.skill  databricks-langchain-skill.skill  langgraph-skill.skill  mlflow3-skill.skill
agent_server/: agent.py  app.yaml  feedback.py  requirements.txt  start_server.py  test_comarketer.ipynb
agent_server/.d/: pyvenv.cfg
agent_server/agents/: acknowledgment.py  agent_model.py  agentbricks.py  capability_registry.py  clarification.py  followup.py  genie_agent.py  genie_analysis.py  genie_worker.py  greeting.py  planner.py  registry.py  synthesizer.py
agent_server/capabilities/: __init__.py  insight_agent.py  registry.py
agent_server/core/: auth.py  config.py  (+6 more)
docs/: 01_structure.md  02_workflow.md  03_agent_architecture.md  04_code_audit.md  05_dependencies_risks.md  06_unknowns.md
notebooks/: 01_verify_deployment.py  02_test_endpoint.ipynb  check_permissions.py  debug_traces.py  demo_request_response.py  discover_lakebase.py  fix_permissions.py  grant_endpoint_permission.json  grant_permission.py  inspect_agentbricks_raw.py  raw_response_crocs.json  raw_response_igp.json  raw_response_pepe_jeans.json  test_deep_query.py  test_endpoint.py  test_graph_caching.py  test_greeting_stream.py  test_phase_a.py  test_progressive_stream.py  test_streaming.py  test_structured_output.py  test_with_requests.py
(+97 files in other folders)
